--- a/index.html
+++ b/index.html
@@ -1,363 +1,229 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1" />
-<title>Erika Antje Haasbroek | Portfolio</title>
-<style>
-  :root {
-    --baby-green: #d9f0d9;
-    --baby-purple: #c9b8f8;
-    --rose-light: #f8c3c3;
-    --rose-dark: #d46a6a;
-    --ivy-green-light: #a3c9a8;
-    --ivy-green-dark: #6b8e6d;
-    --text-dark: #2f2f2f;
-    --background: #f7faf7;
-  }
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Erika Haasbroek | Portfolio</title>
+  <style>
+    :root {
+      --bg: #e6f4ea;
+      --accent: #d8c3e6;
+      --rose: #f8c8c8;
+      --ivy: #a2c5ac;
+      --text: #333;
+      --light: #fff;
+    }
 
-  * {
-    box-sizing: border-box;
-  }
-  body {
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    background: var(--baby-green);
-    color: var(--text-dark);
-    margin: 0; padding: 2rem;
-  }
-
-  header {
-    text-align: center;
-    margin-bottom: 2rem;
-  }
-  header img {
-    width: 150px;
-    border-radius: 50%;
-    margin-bottom: 1rem;
-    border: 5px solid var(--baby-purple);
-    box-shadow: 0 0 10px var(--baby-purple);
-  }
-  header h1 {
-    font-size: 2.8rem;
-    color: var(--ivy-green-dark);
-    margin-bottom: 0.3rem;
-    font-weight: 700;
-  }
-  header p {
-    color: var(--ivy-green-light);
-    font-size: 1.2rem;
-    margin-bottom: 0.5rem;
-  }
-  .button-download {
-    background: var(--rose-light);
-    color: var(--rose-dark);
-    border: 2px solid var(--rose-dark);
-    border-radius: 30px;
-    padding: 0.6rem 1.6rem;
-    font-weight: 600;
-    cursor: pointer;
-    transition: background 0.3s, color 0.3s;
-    display: inline-block;
-    text-decoration: none;
-    box-shadow: 0 4px 6px rgba(212,106,106,0.4);
-  }
-  .button-download:hover {
-    background: var(--rose-dark);
-    color: white;
-  }
-
-  nav {
-    text-align: center;
-    margin-bottom: 2rem;
-    position: relative;
-  }
-
-  #menuToggle {
-    background: var(--rose-light);
-    border: 2px solid var(--rose-dark);
-    border-radius: 50%;
-    width: 50px;
-    height: 50px;
-    cursor: pointer;
-    box-shadow: 0 3px 6px rgba(212,106,106,0.5);
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    gap: 6px;
-    margin: 0 auto;
-    transition: background 0.3s, border-color 0.3s;
-  }
-  #menuToggle:hover {
-    background: var(--rose-dark);
-  }
-  #menuToggle span {
-    display: block;
-    height: 4px;
-    width: 25px;
-    background: var(--rose-dark);
-    border-radius: 2px;
-    transition: background 0.3s;
-  }
-  #menuToggle:hover span {
-    background: white;
-  }
-
-  #navLinks {
-    list-style: none;
-    padding: 0;
-    margin: 1rem 0 0;
-    display: none;
-    text-align: center;
-  }
-  #navLinks.nav-open {
-    display: block;
-  }
-  #navLinks li {
-    margin: 0.7rem 0;
-  }
-  #navLinks a {
-    text-decoration: none;
-    color: var(--ivy-green-dark);
-    font-weight: 600;
-    font-size: 1.2rem;
-    transition: color 0.3s;
-  }
-  #navLinks a:hover {
-    color: var(--baby-purple);
-  }
-
-  /* Social icons container */
-  .social-links {
-    text-align: center;
-    margin: 1.5rem 0;
-  }
-  .social-links a {
-    display: inline-block;
-    background: var(--baby-purple);
-    border-radius: 50%;
-    width: 50px;
-    height: 50px;
-    margin: 0 10px;
-    color: white;
-    font-size: 28px;
-    line-height: 50px;
-    transition: background 0.3s;
-  }
-  .social-links a:hover {
-    background: var(--rose-light);
-    color: var(--rose-dark);
-  }
-
-  section {
-    background: white;
-    margin: 2rem auto;
-    padding: 1.5rem 2rem;
-    max-width: 850px;
-    border-radius: 25px;
-    box-shadow: 0 6px 15px rgba(0,0,0,0.1);
-    position: relative;
-    clip-path: polygon(
-      50% 0%, 75% 12%, 88% 38%, 75% 75%, 50% 100%, 25% 75%, 12% 38%, 25% 12%
-    ); /* flower petal shape */
-  }
-
-  .section-title {
-    font-size: 1.9rem;
-    font-weight: 700;
-    color: var(--ivy-green-dark);
-    margin-bottom: 1rem;
-    border-bottom: 3px solid var(--baby-purple);
-    display: inline-block;
-    padding-bottom: 4px;
-  }
-
-  p {
-    font-size: 1rem;
-    line-height: 1.5;
-    margin-bottom: 1rem;
-  }
-
-  /* Skills as bubbles with ivy decoration */
-  .skills-grid {
-    display: flex;
-    flex-wrap: wrap;
-    gap: 15px;
-    justify-content: center;
-  }
-  .skill-bubble {
-    background: var(--baby-purple);
-    color: var(--ivy-green-dark);
-    padding: 0.7rem 1.3rem;
-    border-radius: 50px;
-    position: relative;
-    font-weight: 600;
-    box-shadow: 0 3px 6px rgba(101, 84, 178, 0.4);
-    transition: background 0.3s;
-    min-width: 120px;
-    text-align: center;
-  }
-  .skill-bubble:hover {
-    background: var(--rose-light);
-    color: var(--rose-dark);
-    box-shadow: 0 6px 12px rgba(212, 106, 106, 0.6);
-  }
-  .skill-bubble::after {
-    content: "🍃";
-    position: absolute;
-    top: -12px;
-    right: 8px;
-    font-size: 18px;
-    filter: drop-shadow(0 0 1px #6b8e6d);
-  }
-
-  footer {
-    text-align: center;
-    margin-top: 3rem;
-    color: var(--ivy-green-dark);
-    font-size: 0.9rem;
-  }
-
-  /* Responsive */
-  @media (max-width: 650px) {
     body {
-      padding: 1rem;
+      font-family: 'Segoe UI', sans-serif;
+      background-color: var(--bg);
+      color: var(--text);
+      margin: 0;
+      padding: 0;
     }
-    section {
-      max-width: 100%;
-      clip-path: none;
-      border-radius: 15px;
+
+    header {
+      text-align: center;
+      padding: 2rem 1rem;
     }
-    #menuToggle {
+
+    header img {
+      width: 150px;
+      border-radius: 50%;
       margin-bottom: 1rem;
     }
-  }
-</style>
 
+    h1 {
+      font-size: 2.5rem;
+      color: var(--ivy);
+    }
 
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
+    p.subtitle {
+      color: var(--accent);
+      font-size: 1.1rem;
+    }
 
+    .button-rose {
+      background-color: var(--rose);
+      border: none;
+      border-radius: 999px;
+      padding: 0.6rem 1.2rem;
+      font-weight: bold;
+      color: var(--text);
+      cursor: pointer;
+      text-decoration: none;
+      margin: 0.5rem;
+      display: inline-block;
+      box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
+      transition: background 0.3s;
+    }
+
+    .button-rose:hover {
+      background-color: #f4a6a6;
+    }
+
+    nav {
+      text-align: center;
+      margin-bottom: 2rem;
+    }
+
+    .menu-button {
+      background-color: var(--rose);
+      border: none;
+      border-radius: 999px;
+      padding: 0.5rem 1rem;
+      font-weight: bold;
+      cursor: pointer;
+      color: var(--text);
+      margin-top: 1rem;
+    }
+
+    .dropdown-content {
+      display: none;
+      position: absolute;
+      background-color: var(--light);
+      min-width: 160px;
+      box-shadow: 0px 8px 16px rgba(0,0,0,0.2);
+      z-index: 1;
+    }
+
+    .dropdown-content a {
+      color: var(--text);
+      padding: 0.8rem 1rem;
+      text-decoration: none;
+      display: block;
+    }
+
+    .dropdown:hover .dropdown-content {
+      display: block;
+    }
+
+    .section {
+      background: var(--light);
+      border-radius: 1rem;
+      margin: 2rem auto;
+      max-width: 800px;
+      padding: 2rem;
+      box-shadow: 0 2px 8px rgba(0,0,0,0.1);
+    }
+
+    .section h2 {
+      color: var(--ivy);
+      border-bottom: 2px solid var(--accent);
+      display: inline-block;
+      margin-bottom: 1rem;
+    }
+
+    .skills-grid {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
+      gap: 1rem;
+      margin-top: 1rem;
+    }
+
+    .skill-item {
+      background: var(--accent);
+      padding: 0.6rem 1rem;
+      border-radius: 1rem;
+      box-shadow: inset 0 0 0.3rem rgba(0,0,0,0.05);
+      position: relative;
+    }
+
+    .skill-item::before {
+      content: '🌿';
+      position: absolute;
+      left: -0.8rem;
+      top: -0.8rem;
+    }
+
+    footer {
+      text-align: center;
+      padding: 1rem;
+      font-size: 0.9rem;
+      color: var(--text);
+    }
+  </style>
 </head>
 <body>
 
+  <header>
+    <img src="profile.jpg" alt="Erika Haasbroek">
+    <h1>Erika Antje Haasbroek</h1>
+    <p class="subtitle">Aspiring IT Developer</p>
+    <a href="resume.pdf" class="button-rose" download>🌹 Download Resume</a>
+  </header>
 
-<header>
-  <img src="profile.jpg" alt="Erika Antje Haasbroek" />
-  <h1>Erika Antje Haasbroek</h1>
-  <p>Aspiring IT Developer</p>
-  <a href="Erika Haasbroek CV.pdf" download="Erika_Haasbroek_Resume.pdf" class="button-download">Download Resume</a>
-</header>
+  <nav>
+    <div class="dropdown">
+      <button class="menu-button">🌹 Menu</button>
+      <div class="dropdown-content">
+        <a href="#about">About</a>
+        <a href="#education">Education</a>
+        <a href="#projects">Projects</a>
+        <a href="#skills">Skills</a>
+        <a href="#contact">Contact</a>
+      </div>
+    </div>
+  </nav>
 
-<nav>
-  <button id="menuToggle" aria-label="Toggle menu">
-    <span></span><span></span><span></span>
-  </button>
-  <ul id="navLinks">
-    <li><a href="#about">About</a></li>
-    <li><a href="#education">Education</a></li>
-    <li><a href="#projects">Projects</a></li>
-    <li><a href="#skills">Skills</a></li>
-    <li><a href="#contact">Contact</a></li>
-  </ul>
-</nav>
+  <section id="about" class="section">
+    <h2>About Me</h2>
+    <p>I am a hardworking and dedicated individual with dual South African and Italian nationality, currently pursuing a BSc in Information Technology at North-West University. My experience spans education, agriculture, and childcare — industries that have shaped my people-focused approach to technology. I bring proficiency in Java, Python, C++, and C#, alongside roles as an Assistant Administrator, Substitute Teacher, and Au Pair. My goal is to build tech-driven solutions that make a real-world impact, especially in underserved communities.</p>
+  </section>
 
-<div class="social-links" aria-label="Social Links">
-  <a href="https://github.com/Erika-Haasbroek" target="_blank" aria-label="GitHub"><i class="fab fa-github"></i></a>
-  <a href="https://www.linkedin.com/in/erika-haasbroek-383589376/" target="_blank" aria-label="LinkedIn"><i class="fab fa-linkedin"></i></a>
-</div>
+  <section id="education" class="section">
+    <h2>Education</h2>
+    <p><strong>Secondary School:</strong> Balfour Combined, South Africa — Graduated Nov 2020</p>
+    <p><strong>Computer Science:</strong> North West University, Potch</p>
+    <p><strong>Coursework:</strong> OOP (Java), Data Structures & Algorithms, Databases, UI Programming (C#), Info Security, Data Analytics, SDLC, Financial Accountancy, Intro to Business</p>
+  </section>
 
-<section id="about">
-  <h2 class="section-title">About Me</h2>
-  <p>
-    Hardworking and dedicated, with dual South African and Italian nationality, pursuing a BSc in IT at North-West University. Experienced in education, agriculture, and childcare, shaping a people-focused approach to technology. Skilled in Java, Python, C++, and C#. I aim to create tech solutions for underserved communities and thrive in multicultural environments.
-  </p>
-</section>
+  <section id="projects" class="section">
+    <h2>Projects</h2>
+    <p><strong>Virtual CV Website:</strong> Responsive personal website built using HTML/CSS and JavaScript in VS Code.dev with GitHub version control. <a href="https://github.com/Erika-Haasbroek/Virtual-CV" target="_blank">View on GitHub</a></p>
+    <p><strong>DVD Rental System:</strong> C#.NET system for rental management built with Microsoft SQL Server. <a href="https://github.com/Erika-Haasbroek/CMPG223_Group10_DVD_Rental" target="_blank">View on GitHub</a></p>
+  </section>
 
-<section id="education">
-  <h2 class="section-title">Education</h2>
-  <p><strong>Secondary School:</strong> Balfour Combined, South Africa — Graduated Nov 2020</p>
-  <p><strong>BSc Computer Science:</strong> North West University, Potch</p>
-  <p><strong>Relevant Coursework:</strong> OOP (Java), Data Structures & Algorithms, Databases (Oracle & SQL), AI, UI Programming (C#), Info Security, Data Analytics, System Analysis, Decision Support Systems, Financial Accountancy, Intro to Business Management</p>
-</section>
+  <section id="skills" class="section">
+    <h2>Skills</h2>
+    <div class="skills-grid">
+      <div class="skill-item">Java</div>
+      <div class="skill-item">Python</div>
+      <div class="skill-item">C++</div>
+      <div class="skill-item">C#</div>
+      <div class="skill-item">SQL</div>
+      <div class="skill-item">Web Dev</div>
+      <div class="skill-item">GitHub</div>
+      <div class="skill-item">Oracle</div>
+      <div class="skill-item">Visual Studio</div>
+      <div class="skill-item">BlueJ</div>
+      <div class="skill-item">CodeBlocks</div>
+      <div class="skill-item">AI</div>
+      <div class="skill-item">Agile</div>
+      <div class="skill-item">Communication</div>
+      <div class="skill-item">Teamwork</div>
+      <div class="skill-item">Time Management</div>
+    </div>
+  </section>
 
-<section id="projects">
-  <h2 class="section-title">Projects</h2>
-  <ul>
-    <li>
-      <strong>Virtual CV Website:</strong> Responsive, interactive site showcasing skills and experience, built entirely in VS Code.dev with GitHub version control.<br/>
-      <a href="https://github.com/Erika-Haasbroek/Virtual-CV" target="_blank">View on GitHub</a>
-    </li>
-    <li>
-      <strong>DVD Rental System:</strong> Custom C#.NET app simulating DVD rental store operations with MS SQL Server backend.<br/>
-      <a href="https://github.com/Erika-Haasbroek/CMPG223_Group10_DVD_Rental" target="_blank">View on GitHub</a>
-    </li>
-  </ul>
-</section>
+  <section id="contact" class="section">
+    <h2>Contact</h2>
+    <p>Email: <a href="mailto:erikahaasbroek86@gmail.com">erikahaasbroek86@gmail.com</a></p>
+    <p>
+      <a href="https://github.com/Erika-Haasbroek" target="_blank">
+        <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/github/github-original.svg" width="24" alt="GitHub" />
+      </a>
+      &nbsp;
+      <a href="https://www.linkedin.com/in/erika-haasbroek-383589376/" target="_blank">
+        <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/linkedin/linkedin-original.svg" width="24" alt="LinkedIn" />
+      </a>
+    </p>
+  </section>
 
-<section id="skills">
-  <h2 class="section-title">Skills</h2>
-
-  <h3>Languages</h3>
-  <div class="skills-grid">
-    <div class="skill-bubble">Afrikaans (fluent)</div>
-    <div class="skill-bubble">English (fluent)</div>
-    <div class="skill-bubble">German B1</div>
-    <div class="skill-bubble">Java</div>
-    <div class="skill-bubble">SQL</div>
-    <div class="skill-bubble">C++</div>
-    <div class="skill-bubble">C#</div>
-    <div class="skill-bubble">Python</div>
-  </div>
-
-  <h3>Industry Knowledge</h3>
-  <div class="skills-grid">
-    <div class="skill-bubble">Web Development (Front-End)</div>
-    <div class="skill-bubble">Agile Methodology</div>
-    <div class="skill-bubble">Database Design</div>
-    <div class="skill-bubble">Database Development</div>
-    <div class="skill-bubble">SDLC</div>
-    <div class="skill-bubble">Artificial Intelligence</div>
-  </div>
-
-  <h3>Tools & Technologies</h3>
-  <div class="skills-grid">
-    <div class="skill-bubble">GitHub</div>
-    <div class="skill-bubble">Oracle</div>
-    <div class="skill-bubble">Visual Studio</div>
-    <div class="skill-bubble">BlueJ</div>
-    <div class="skill-bubble">Draw.io</div>
-    <div class="skill-bubble">CodeBlocks</div>
-  </div>
-
-  <h3>Interpersonal Skills</h3>
-  <div class="skills-grid">
-    <div class="skill-bubble">Effective Communication</div>
-    <div class="skill-bubble">Team Collaboration</div>
-    <div class="skill-bubble">Problem Solving</div>
-    <div class="skill-bubble">Time Management</div>
-    <div class="skill-bubble">Attention to Detail</div>
-    <div class="skill-bubble">Working Under Pressure</div>
-  </div>
-</section>
-
-<section id="contact">
-  <h2 class="section-title">Contact</h2>
-  <p>Email: <a href="mailto:erikahaasbroek86@gmail.com">erikahaasbroek86@gmail.com</a></p>
-  <p>GitHub: <a href="https://github.com/Erika-Haasbroek" target="_blank">github.com/Erika-Haasbroek</a></p>
-  <p>LinkedIn: <a href="https://www.linkedin.com/in/erika-haasbroek-383589376/" target="_blank">linkedin.com/in/Erika-Haasbroek</a></p>
-</section>
-
-<footer>
-  <p>&copy; 2025 Erika Haasbroek. Built with HTML & CSS.</p>
-</footer>
-
-<script>
-  const menuToggle = document.getElementById('menuToggle');
-  const navLinks = document.getElementById('navLinks');
-  menuToggle.addEventListener('click', () => {
-    navLinks.classList.toggle('nav-open');
-  });
-</script>
+  <footer>
+    <p>&copy; 2025 Erika Haasbroek. Built with 🌹 and HTML/CSS.</p>
+  </footer>
 
 </body>
 </html>
