--- a/index.html
+++ b/index.html
@@ -148,10 +148,10 @@
 <body>
 
   <header>
-    <img src="profile.jpg" alt="Erika Haasbroek">
+    <img src="uploads/profile.jpg" alt="Erika Haasbroek">
     <h1>Erika Antje Haasbroek</h1>
     <p class="subtitle">Aspiring IT Developer</p>
-    <a href="resume.pdf" class="button-rose" download>🌹 Download Resume</a>
+    <a href="uploads/Erika Haasbroek CV.pdf" class="button-rose" download>🌹 Download Resume</a>
   </header>
 
   <nav>
